# myproject

./: .gitignore  pyproject.toml
mylibreria/: README.md  camera.py  locate.py  prueba_argparse.py  prueba_decorators.py  prueba_for_else.py  prueba_noreturn.py  pytest_parametrize.py  python_cli_tested_with_pytest_1.py  t.py
tests/: conftest.py  test_assert1.py  test_hello.py  tests_camera.py
